--- a/main/src/src_css/screens/GroupDetailed.css
+++ b/main/src/src_css/screens/GroupDetailed.css
@@ -20,3 +20,140 @@ h5 {
   border-radius: .5rem;
   margin: 0;
 }
+
+.chat-wrapper {
+  position: fixed;
+  bottom: 1.5rem;
+  right: 2rem;
+  z-index: 2000;
+  max-width: 26rem;
+  font-family: Arial, sans-serif;
+}
+
+.chat-toggle-btn {
+  border-radius: 10rem !important;
+  padding: 0.3rem;
+  height: 3.8rem;
+  width: 3.8rem;
+  border: none;
+  color: #f6f6f6;
+  border-radius: 50%;
+  font-size: x-large !important;
+  background-color: #ffc107 !important;
+}
+
+.chat-header .chat-toggle-btn {
+  height: 2rem;
+  width: 2rem;
+  padding: 0;
+  background-color: transparent !important;
+  color: white;
+}
+
+.chat-box {
+  background-color: #1f1f1f;
+  border-radius: 1.2rem;
+  overflow-y: auto;
+  padding: 1rem;
+  width: 100%;
+  max-height: 35rem;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.4) transparent;
+}
+
+.chat-box::-webkit-scrollbar {
+  width: 8px;
+}
+
+.chat-box::-webkit-scrollbar-track {
+  background: transparent; 
+}
+
+.chat-box::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.4); 
+  border-radius: 4px;
+}
+
+.chat-header {
+  padding: 8px 12px;
+  border-bottom: 1px solid #444;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.messages {
+  flex: 1;
+  overflow-y: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.message {
+  display: flex;
+  align-items: flex-start;
+  gap: 0.5rem;
+  margin-bottom: 0.75rem;
+}
+
+.avatar {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 1px solid #ccc;
+  margin-top: 4px;
+}
+
+.message-content {
+  background-color: #2c2f33;
+  border-radius: 1rem;
+  padding: 0.75rem 1rem;
+  color: #f1f1f1;
+  max-width: 320px;
+  word-break: break-word;
+  white-space: pre-wrap;
+  position: relative;
+  text-align: left;
+}
+
+
+.message-content .user {
+  font-weight: 600;
+  color: #ffffff;
+  font-size: 0.9rem;
+  margin-bottom: 0.3rem;
+  display: block;
+  text-align: left;
+}
+
+.send-button {
+  background-color: #ffc107;
+  border-radius: 10rem !important;
+  aspect-ratio: 1/1;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  color: #000;
+  cursor: pointer;
+  box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.3);
+}
+
+.new-message-form{
+  display: flex;
+  height: 15rem;
+}
+
+.new-message-input{
+  margin-right: 1rem;
+  border-radius: 10rem;
+  padding: .4rem 1rem;
+  width: 100%;
+  line-height: 0%;
+  outline: none;
+  border: 0px;
+  box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.3);
+}
