--- a/main/src/src_css/screens/Home.css
+++ b/main/src/src_css/screens/Home.css
@@ -17,7 +17,7 @@ body {
 }
 
 .top-left{
-  height: 40%; 
+  height: 25rem; 
   box-sizing: border-box;
   padding: .5rem;
   background-color: transparent;
