the start of smth special
responsiveness...

--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -16,7 +16,12 @@
   left: 0;
   background-color: black;      
   padding-top: 2rem;
+}
 
+@media (max-width: 991px) {
+  #sidebar {
+    display: none !important;
+  }
 }
 
 .nav-item{
