--- a/main/src/src_css/screens/Home.css
+++ b/main/src/src_css/screens/Home.css
@@ -92,3 +92,25 @@ body {
   color: #0f0f0f !important;
   margin-top: -3rem;
 }
+
+@media (max-width: 991px) {
+  #home {
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+  }
+  .left-side,
+  .right-side {
+    width: 100%;
+    margin: 0;
+    padding: 0.5rem;
+  }
+
+  .right-side {
+    padding: 2rem;
+  }
+  .footer {
+    margin-top: 2rem;
+    text-align: center;
+  }
+}
