--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -18,20 +18,6 @@
   padding-top: 2rem;
 }
 
-@media (max-width: 991px) {
-  .navbar-nav {
-    width: 100%;
-    flex-direction: column !important;
-    padding: 1rem 0;
-  }
-  .navbar-collapse {
-    width: 100%;
-  }
-  #sidebar {
-    display: none !important;
-  }
-}
-
 .nav-item{
     background-color: #1f1f1f;
     border-radius: 10rem;
@@ -158,6 +144,18 @@
 }
 
 @media (max-width: 991px) {
+    .navbar-nav {
+    width: 100%;
+    flex-direction: column !important;
+    padding: 1rem 0;
+  }
+  .navbar-collapse {
+    width: 100%;
+  }
+  #sidebar {
+    display: none !important;
+  }
+
   .user-form {
     background-color: #1f1f1f;
     transition: background-color 0.2s ease-in-out;
@@ -176,9 +174,49 @@
     background-color: #1f1f1f;
   }
 
-  .user-link{
-    width: 100%;
+    .user-list{
+    width: 100% !important;
+    height: 100%;
+    align-items: center;
   }
+
+  .user-link{
+    width: 100% !important;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+    #search-form {
+    width: 100% !important;
+    margin-left: .5rem !important;
+  }
+
+  #draop{
+  padding: 0rem !important;
+  margin-left: 0 !important;
+  margin-top: 0 !important;
+  width: 100% !important;
+  background-color: black !important;
+}
+
+#draop .dropdown-item{
+  background-color: #1f1f1f;
+  border-radius: 10rem !important;
+  text-align: center;
+  padding: 3rem;
+  margin: 1rem 0rem;
+  width: 100% !important;
+  height: 4rem !important;
+  transition: background-color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
+  align-items: center !important;
+  justify-content: center !important;
+  color: white;
+}
+
+#draop .dropdown-item:hover{
+  background-color: #393939;
+}
 }
 
 #search-but{
@@ -206,13 +244,6 @@
   width: 15vw;
   margin-left: .5vw;
   background-color: #1f1f1f;
-}
-
-@media (max-width: 991px) {
-  #search-form {
-    width: 100%;
-    margin-left: .5rem;
-  }
 }
 
 #search-form:focus, #search-form.has-value, #search-form:active{
@@ -250,10 +281,11 @@
 #draop{
   background-color: #1f1f1f;
   padding: .6rem;
-  margin-left: -16rem;
+  margin-left: -10rem;
   margin-top: .4rem;
   width: 20rem;
 }
+
 
 #draop .dropdown-item{
   background-color: #1f1f1f;
