--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -51,11 +51,6 @@
     background-color: #1f1f1f;
 }
 
-#navbarSupportedContent{
-  background-color: rgb(0, 0, 0);
-  width: 100%;
-}
-
 #sidebar .nav-item{
     background-color: #1f1f1f;
     margin-left: 1.8rem;
@@ -145,18 +140,13 @@
   margin: 0;
 }
 
-.user-form{
+#rightest{
   position: fixed;
   right: 1.5rem;
   display: flex;
-  border-radius: 10rem;
-  width: 10rem;
-  margin: 0.5rem 0.5rem;
-  padding: 0;
-
 }
 
-.user-form h5{
+#rightest h5{
   color:#f6f6f6;
   margin: 1rem 1rem;
   font-family: 'Roboto Condensed', sans-serif !important;
@@ -175,68 +165,15 @@
   #sidebar {
     display: none !important;
   }
-
-  .user-form {
-    background-color: #1f1f1f;
-    transition: background-color 0.2s ease-in-out;
-    position: inherit;
-    width: 96%;
-    justify-content: center;
-    height: 4rem;
-    margin: 0.5rem;
-  }
-
-  .user-form:hover {
-    background-color: #393939;
-  }
-
-  .user-form:active {
-    background-color: #1f1f1f;
-  }
-
-    .user-list{
-    width: 100% !important;
-    height: 100%;
-    align-items: center;
-  }
-
-  .user-link{
-    width: 100% !important;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-  }
+  
     #search-form {
     width: 100% !important;
     margin-left: .5rem !important;
   }
 
-  #draop{
-  padding: 0rem !important;
-  margin-left: 0 !important;
-  margin-top: 0 !important;
-  width: 100% !important;
-  background-color: black !important;
-}
-
-#draop .dropdown-item{
-  background-color: #1f1f1f;
-  border-radius: 10rem !important;
-  text-align: center;
-  padding: 3rem;
-  margin: 1rem 0rem;
-  width: 100% !important;
-  height: 4rem !important;
-  transition: background-color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out;
-  align-items: center !important;
-  justify-content: center !important;
-  color: white;
-}
-
-#draop .dropdown-item:hover{
-  background-color: #393939;
-}
+  #rightest{
+    display:none !important;
+  }
 
 .desk-item{
     background-color: #1f1f1f;
@@ -244,6 +181,12 @@
     padding: .6rem;
     transition: background-color 0.2s ease-in-out;
     display: block;
+}
+
+#navbarSupportedContent{
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  height: 100vh;
 }
 }
 
