the hide password

--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -252,8 +252,8 @@
 #draop{
   background-color: #1f1f1f;
   padding: .6rem;
-  margin-left: -10rem;
-  margin-top: .4rem;
+  margin-left: -16rem;
+  margin-top: 1rem;
   width: 20rem;
 }
 
