--- a/main/src/src_css/components/authentication/LandingPage.css
+++ b/main/src/src_css/components/authentication/LandingPage.css
@@ -21,6 +21,10 @@
     width: 40vw;
     animation: rollIn 2.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) 0s 1;
   }
+
+  landing-container{
+    overflow-y: hidden;
+  }
 }
 
 /* Mobile */
