--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -166,20 +166,33 @@
     display: none !important;
   }
   
-    #search-form {
-    width: 100% !important;
-    margin-left: .5rem !important;
+#main-search-form {
+  margin: -0.5rem;
   }
+
+#search-form {
+  display:none;
+  }
+
+#search-but {
+  display:none;
+  }
+
+#search-but-desk {
+  display:block !important;
+  }
+
+#search-form-desk{
+  width: 100% !important;
+  margin-left: .5rem !important;
+  display: block !important;
+}
 
   #rightest{
     display:none !important;
   }
 
 .desk-item{
-    background-color: #1f1f1f;
-    border-radius: 10rem;
-    padding: .6rem;
-    transition: background-color 0.2s ease-in-out;
     display: block;
 }
 
@@ -187,6 +200,7 @@
   background-color: rgb(0, 0, 0);
   width: 100%;
   height: 100vh;
+  transition: height 0.3s ease-in-out;
 }
 }
 
@@ -198,6 +212,17 @@
   border-radius: 50%;
   aspect-ratio: 1 / 1;
   transition: background-color 0.2s ease-in-out;
+}
+
+#search-but-desk{
+  background-color: #1f1f1f;
+  border: none;
+  color: #f6f6f6;
+  height: 3.8rem;
+  border-radius: 50%;
+  aspect-ratio: 1 / 1;
+  transition: background-color 0.2s ease-in-out;
+  display: none;
 }
 
 #search-but:hover{
@@ -215,6 +240,16 @@
   width: 15vw;
   margin-left: .5vw;
   background-color: #1f1f1f;
+}
+
+#search-form-desk{
+  border-radius: 10rem;
+  border: none;
+  padding: 1rem;
+  width: 15vw;
+  margin-left: .5vw;
+  background-color: #1f1f1f;
+  display: none;
 }
 
 #search-form:focus, #search-form.has-value, #search-form:active{
