--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -38,7 +38,7 @@
     background-color: #1f1f1f;
     border-radius: 10rem;
     margin:0.5rem .5rem;
-    padding: .6rem;
+    padding: 1.2rem;
     transition: background-color 0.2s ease-in-out;
     display: none;
 }
