--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -165,6 +165,10 @@
   #sidebar {
     display: none !important;
   }
+
+  .nav-item{
+  display: none !important;
+}
   
 #main-search-form {
   margin: -0.5rem;
@@ -250,6 +254,7 @@
   margin-left: .5vw;
   background-color: #1f1f1f;
   display: none;
+  color: white;
 }
 
 #search-form:focus, #search-form.has-value, #search-form:active{
