--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -41,6 +41,7 @@
     padding: 1.2rem;
     transition: background-color 0.2s ease-in-out;
     display: none;
+    color: "white" !important;
 }
 
 .desk-item:hover{
