--- a/main/src/src_css/components/task/TaskCalendar.css
+++ b/main/src/src_css/components/task/TaskCalendar.css
@@ -1,9 +1,3 @@
-.calendar-container {
-  padding: 2rem;
-  max-width: 900px;
-  margin: auto;
-}
-
 .react-calendar {
   border: none;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -15,14 +9,50 @@
 .deadline-count {
   background-color: #e74c3c;
   color: white !important;
-  border-radius: 8px;
-  padding: 2px 5px;
+  border-radius: 10rem;
+  font-size: 0.75rem;
+  height: 0.9rem;
+  margin-left: 1.5rem;
+  margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 1/1;
   text-align: center;
-  margin-top: 5px;
+  position: absolute;
 }
 
-.task-list {
-  margin-top: 2rem;
-  width: 100%;
+.react-calendar__tile{
+    color: white;
+    min-height: 3rem;
+    aspect-ratio: 1/1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+.react-calendar__tile--now{
+    background-color: orange;
+    border-radius: 100rem;
+}
+
+.react-calendar__tile--active{
+    border-radius: 100rem;
+}
+
+.react-calendar__navigation,
+.react-calendar__navigation__label,
+.react-calendar__navigation__arrow,
+.react-calendar__navigation__prev-button,
+.react-calendar__navigation__next-button,
+.react-calendar__navigation__prev2-button,
+.react-calendar__navigation__next2-button {
+  color: white;
+  fill: white;
+}
+.react-calendar__tile:hover,
+.react-calendar__navigation button:hover {
+  background-color: #393939 !important;
+  border-radius: 100em !important;
+  transition: border-radius 0.2s ease, background-color 0.2s ease;
+}
