--- a/main/src/src_css/screens/GroupDetailed.css
+++ b/main/src/src_css/screens/GroupDetailed.css
@@ -26,7 +26,7 @@ h5 {
   bottom: 1.5rem;
   right: 2rem;
   z-index: 2000;
-  max-width: 26rem;
+  width: 26rem;
   font-family: Arial, sans-serif;
 }
 
@@ -145,7 +145,7 @@ h5 {
 
 .new-message-form{
   display: flex;
-  height: 15rem;
+  max-height: 15rem;
 }
 
 .new-message-input{
