--- a/main/src/src_css/components/Header.css
+++ b/main/src/src_css/components/Header.css
@@ -296,12 +296,20 @@
 }
 
 #search-form{
-  border-radius: 10rem;
-  border: none;
-  padding: 1rem;
-  width: 15vw;
+    background: rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+
+    border-radius: 10rem;
+    padding: 1rem;
+    width: 15vw;
+
+    box-shadow:
+        inset 0 0 0.5px rgba(255, 255, 255, 0.25),
+        inset 0 0 6px rgba(255, 255, 255, 0.06),
+        0 6px 10px rgba(0, 0, 0, 0.5);
   margin-left: .5vw;
-  background-color: #1f1f1f;
 }
 
 #search-form-desk{
@@ -327,6 +335,10 @@
 
 #search-form:focus, #search-form.has-value, #search-form:active{
   color: #f6f6f6 !important;
+  box-shadow:
+        inset 0 0 1px rgba(255, 255, 255, 0.3),
+        inset 0 0 8px rgba(255, 255, 255, 0.1),
+        0 8px 14px rgba(0, 0, 0, 0.6);
 }
 
 #search-form-user:focus, #search-form-user.has-value, #search-form-user:active{
