--- a/main/src/App.css
+++ b/main/src/App.css
@@ -30,3 +30,12 @@ h4 {
 *:focus-visible {
   outline: auto;
 }
+
+body {
+  background: linear-gradient(
+    135deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(12, 0, 19, 0.5) 40%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
+}
