invitations and homescreen

--- a/main/src/src_css/components/task/TaskCard.css
+++ b/main/src/src_css/components/task/TaskCard.css
@@ -1,5 +1,5 @@
 .task-carda {
-  margin: 1.25rem auto;
+  margin: .75rem auto;
   padding: 1rem 1rem 0rem 1rem;
   max-width: 31.25rem;
   min-height: 19.5rem;
