--- a/main/src/src_css/components/authentication/Invitations.css
+++ b/main/src/src_css/components/authentication/Invitations.css
@@ -12,7 +12,7 @@
 
 .invitations-list-item {
   background: rgba(255, 255, 255, 0.05) !important;
-  border: 1px solid rgba(255, 255, 255, 0.15) !important  ;
+  border: 1px solid rgba(255, 255, 255, 0.15) !important ;
   backdrop-filter: blur(12px);
   -webkit-backdrop-filter: blur(12px);
   box-shadow:
@@ -48,8 +48,18 @@
 }
 
 .request-list-item {
-  background-color: #1f1f1f !important;
-  border: none !important;
+  background: rgba(255, 255, 255, 0.05) !important;
+  border: 1px solid rgba(255, 255, 255, 0.15) !important ;
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  box-shadow:
+    inset 0 0 0.5px rgba(255, 255, 255, 0.25),
+    inset 0 0 5px rgba(255, 255, 255, 0.06),
+    0 8px 16px rgba(0, 0, 0, 0.4),
+    0 4px 6px rgba(255, 255, 255, 0.03);
+  transition: all 0.3s ease;
+  cursor: pointer;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
   padding: 1rem;
   color: #f6f6f6;
   border-radius: .5rem;
