--- a/main/src/src_css/components/task/AddTask.css
+++ b/main/src/src_css/components/task/AddTask.css
@@ -2,7 +2,18 @@
   width: 100%;
   min-height: 25rem;
   padding: 2rem;
-  background-color: #1f1f1f ;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease;
+  box-shadow: 
+        inset 0 0 0.5px rgba(255, 255, 255, 0.3),
+        inset 0 0 5px rgba(255, 255, 255, 0.1),
+        0 8px 16px rgba(0, 0, 0, 0.5),
+        0 4px 6px rgba(255, 255, 255, 0.05);
   border-radius: 0.5rem;
 }
 
