--- a/main/src/src_css/components/task/FinishedTasks.css
+++ b/main/src/src_css/components/task/FinishedTasks.css
@@ -1,8 +1,18 @@
 .finished-task-card {
   width: 100%;
   max-width: 22rem;
-  background-color: #1f1f1f;
-  box-shadow: inset 0px -2px 6px -2px rgba(0, 0, 0, 0.26);
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease;
+  box-shadow: 
+        inset 0 0 0.5px rgba(255, 255, 255, 0.3),
+        inset 0 0 5px rgba(255, 255, 255, 0.1),
+        0 8px 16px rgba(0, 0, 0, 0.5),
+        0 4px 6px rgba(255, 255, 255, 0.05);
   color: #f6f6f6;
   border-radius: 0.8rem;
 }
