--- a/main/src/src_css/screens/GroupDetailed.css
+++ b/main/src/src_css/screens/GroupDetailed.css
@@ -53,7 +53,18 @@ h5 {
 }
 
 .chat-box {
-  background-color: #1f1f1f;
+  background: #1f1f1f0d;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease;
+  box-shadow: 
+        inset 0 0 0.5px rgba(255, 255, 255, 0.3),
+        inset 0 0 5px rgba(255, 255, 255, 0.1),
+        0 8px 16px rgba(0, 0, 0, 0.5),
+        0 4px 6px rgba(255, 255, 255, 0.05);
   border-radius: 1.2rem;
   overflow-y: auto;
   padding: 1rem;
